# vkEngineServer

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  netpacket.h  vkEngineServer  vkEngineServer.c  vkEngineServer.sln  vkEngineServer.vcxproj  vkEngineServer.vcxproj.filters
camera/: camera.c  camera.h
math/: math.c  math.h  quat.c  vec2.c  vec3.c  vec4.c
network/: network.c
particle/: particle.c  particle.h
physics/: physics.c  physics.h
system/: memzone.c  system.h  threads.c
utils/: list.c  list.h  memzone.c  memzone.h  serial.h
